schema/testdata/validation_function_unsupported_attribute/schema.keel
model Profile {
  fields {
    username Text
  }

  functions {
    create createProfile(username) {
      @set(ctx.identity = profile.identity)
    }
  }
}
